--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Compiled class file
 *.class
-
+out/
 
 # Log file
 *.log
@@ -21,8 +21,7 @@
 *.rar
 
 #Images
-storage/images/
-storage/tags/
+storage/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
